--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ redis = "^4.6.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
 pylint = "^2.17.4"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
